Humidity_Box/less
-------------------------
Arduino.mk Configuration:
- [AUTODETECTED]       CURRENT_OS = LINUX 
- [USER]               ARDMK_DIR = /usr/lib/Arduino-Makefile 
- [USER]               ARDUINO_DIR = /usr/lib/Arduino 
- [DEFAULT]            ARDUINO_VERSION = 100 
- [USER]               ARDUINO_SKETCHBOOK = /home/michal/Projects/Arduino 
- [USER]               AVR_TOOLS_DIR = /usr 
- [COMPUTED]           ARDUINO_LIB_PATH = /usr/lib/Arduino/libraries (from ARDUINO_DIR)
- [DEFAULT]            ARDUINO_CORE_PATH = /usr/lib/Arduino/hardware/arduino/cores/arduino 
- [COMPUTED]           ARDUINO_VAR_PATH = /usr/lib/Arduino/hardware/arduino/variants (from ARDUINO_DIR)
- [COMPUTED]           BOARDS_TXT = /usr/lib/Arduino/hardware/arduino/boards.txt (from ARDUINO_DIR)
- [USER]               USER_LIB_PATH = /home/michal/Projects/Arduino/libraries 
- [DEFAULT]            PRE_BUILD_HOOK = pre-build-hook.sh 
- [USER]               BOARD_TAG = uno 
- [COMPUTED]           OBJDIR = build-uno (from BOARD_TAG)
-                      No .pde or .ino files found. If you are compiling .c or .cpp files then you need to explicitly include Arduino header files
- [ASSUMED]            MONITOR_BAUDRATE = 9600 
- [DEFAULT]            OPTIMIZATION_LEVEL = s 
- [DEFAULT]            MCU_FLAG_NAME = mmcu 
- [DEFAULT]            CFLAGS_STD = -std=gnu99 
- [AUTODETECTED]       Size utility: AVR-aware for enhanced output
-
-                      ARDUINO_LIBS =
- [USER]                 Time
- [USER]                 Menu
- [USER]                 DS1307RTC
- [USER]                 Button
- [SYSTEM]               Wire
- [SYSTEM]               LiquidCrystal
- [SYSTEM]               Wire/utility
- [COMPUTED]           BOOTLOADER_PARENT = /usr/lib/Arduino/hardware/arduino/bootloaders (from ARDUINO_DIR)
-------------------------
mkdir -p build-uno
/usr/bin/avr-g++ -MMD -c -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=100 -D__PROG_TYPES_COMPAT__ -I. -I/usr/lib/Arduino/hardware/arduino/cores/arduino -I/usr/lib/Arduino/hardware/arduino/variants/standard -I/usr/lib/Arduino/libraries/Wire -I/usr/lib/Arduino/libraries/LiquidCrystal -I/usr/lib/Arduino/libraries/Wire/utility -I/home/michal/Projects/Arduino/libraries/Time -I/home/michal/Projects/Arduino/libraries/Menu -I/home/michal/Projects/Arduino/libraries/DS1307RTC -I/home/michal/Projects/Arduino/libraries/Button -Wall -ffunction-sections -fdata-sections -Os -fno-exceptions   project.cpp -o build-uno/project.o
project.cpp: In function 'byte get_humidity_temperature()':
project.cpp:171:40: warning: ISO C++ says that these are ambiguous, even though the worst conversion for the first is better than the worst conversion for the second:
     Wire.requestFrom(HIH6130_address, 4);
                                        ^
In file included from project.cpp:10:0:
/usr/lib/Arduino/libraries/Wire/Wire.h:58:13: note: candidate 1: uint8_t TwoWire::requestFrom(int, int)
     uint8_t requestFrom(int, int);
             ^
/usr/lib/Arduino/libraries/Wire/Wire.h:56:13: note: candidate 2: uint8_t TwoWire::requestFrom(uint8_t, uint8_t)
     uint8_t requestFrom(uint8_t, uint8_t);
             ^
project.cpp: In function 'void change_humidity(int)':
project.cpp:265:59: error: 'class Menu' has no member named 'save_changes_dialog'
             main_menu->change_current_action(&(main_menu->save_changes_dialog));
                                                           ^
project.cpp:273:65: error: invalid use of non-static member function
             main_menu->change_current_action(main_menu->navigate);
                                                                 ^
/usr/lib/Arduino-Makefile/Arduino.mk:970: recipe for target 'build-uno/project.o' failed
make: *** [build-uno/project.o] Error 1
